--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				</div>
 			</footer>
 		</main>
-		<script src="/main.js" type="module"></script>
+		<script src="./main.js" type="module"></script>
 	</body>
 
 </html>
