to match design

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<main id="app" class="min-h-dvh relative">
 			<section id="hero" class="h-[650px]">
-				<header class="px-6 py-10">
+				<header class="px-6 pt-[68px]">
 					<nav class="sec-container flex justify-between items-center">
 						<img src="/images/logo.svg" alt="Company logo" class=" relative z-50">
 						<div class="z-40">
@@ -41,7 +41,7 @@
 				</header>
 
 				<div class="mt-[115px] md:mt-[70px] sec-container">
-					<h1 class="border max-w-[650px] p-6 md:p-10 mx-4 md:mx-0">Immersive experiences that deliver</h1>
+					<h1 class="border-2 max-w-[650px] p-6 md:p-10 mx-4 md:mx-0">Immersive experiences that deliver</h1>
 				</div>
 			</section>
 
@@ -60,7 +60,7 @@
 				</div>
 			</section>
 
-			<section id="creations" class="sec-container relative mb-24 md:mb-[184px]">
+			<section id="creations" class="sec-container relative mb-24 md:mb-[184px] mt-6">
 				<h2 class="mb-12">our creations</h2>
 				<div>
 					<ul aria-label="Creation List" class="lmd:space-y-6 flex flex-wrap justify-center md:gap-[30px]">
@@ -82,7 +82,7 @@
 				</div>
 			</section>
 
-			<section id="app-footer" class=" bg-black py-14 ">
+			<footer class=" bg-black py-14 ">
 				<div class="sec-container zflex flex-col md:justify-between md:flex-row">
 					<div aria-label="Footer navigation" class="zflex flex-col md:items-start">
 						<img src="/images/logo.svg" alt="Company logo">
@@ -113,15 +113,6 @@
 					</div>
 				</div>
 
-			</section>
-
-			<footer class="p-2 bg-slate-900">
-				<div class="zflex flex-wrap text-white">
-					<span class="lmd:hidden pl-1">Challenge by</span> <a href="https://www.frontendmentor.io/challenges/loopstudios-landing-page-N88J5Onjw"
-						target="_blank" class="pl-2 pr-3 text-gray-400">Frontend Mentor</a>
-					Coded by <a href="https://zaportfolio.com/" target="_blank" class="pl-2 text-gray-400">Zakaria
-						Ali</a>.
-				</div>
 			</footer>
 		</main>
 		<script src="/src/main.js" type="module"></script>
