--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 			</section>
 
-			<section id="description" class="px-6 max-w-[1206px] mx-auto md:px-12 my-24 md:my-40 ">
+			<section id="description" class="px-6 max-w-[1206px] mx-auto md:px-12 my-24 md:mt-40 md:mb-[184px] ">
 				<div class="relative">
 					<img :src="`./images/${device}/image-interactive.jpg`" alt="a man with vr device">
 					<div class="lmd:px-6 mt-12 md:absolute z-10
@@ -60,8 +60,8 @@
 				</div>
 			</section>
 
-			<section id="creations" class="sec-container relative mb-24 md:mb-[184px] mt-6">
-				<h2 class="mb-12">our creations</h2>
+			<section id="creations" class="sec-container relative mb-24 md:mb-[184px]">
+				<h2 class="mb-20">our creations</h2>
 				<div>
 					<ul aria-label="Creation List" class="lmd:space-y-6 flex flex-wrap justify-center md:gap-[30px]">
 						<li v-for="create in creations" class="group lmd:px-6 relative">
@@ -82,7 +82,7 @@
 				</div>
 			</section>
 
-			<footer class=" bg-black py-14 ">
+			<footer class=" bg-black py-10 ">
 				<div class="sec-container zflex flex-col md:justify-between md:flex-row">
 					<div aria-label="Footer navigation" class="zflex flex-col md:items-start">
 						<img src="./images/logo.svg" alt="Company logo">
