--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<main id="app" class="min-h-dvh relative">
 			<section id="hero" class="h-[650px]">
 				<header class="px-6 pt-[68px]">
-					<nav class="sec-container flex justify-between items-center">
+					<div class="sec-container flex justify-between items-center">
 						<img src="./images/logo.svg" alt="Company logo" class=" relative z-50">
 						<div class="z-40">
 							<Transition name="fade">
@@ -37,7 +37,7 @@
 							aria-controls="navigation">
 							<img :src="`./images/${menuIcon}`" :alt="isOpen ? 'Close Menu' : 'Open Menu'">
 						</button>
-					</nav>
+					</div>
 				</header>
 
 				<div class="mt-[115px] md:mt-[126px] sec-container relative z-10">
